[package]
name = "netlink-packet-wireguard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
byteorder = "1.4.3"
libc = "0.2.98"
netlink-packet-generic = { git = "https://github.com/Leo1003/netlink", branch = "generic-netlink" }
netlink-packet-utils = "0.4.1"

[dev-dependencies]
netlink-proto = "0.7.0"
