[package]
name = "wirectl"
description = "Library to control Wireguard with kernel or userspace implementation"
version = "0.0.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Leo1003/wiremole"
license = "Apache-2.0"
keywords = ["wireguard"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.24"
log = "0.4.14"
x25519-dalek = "1.1.0"
bitflags = "1.2.1"
ipnetwork = "0.17.0"
zeroize = "1.2.0"
base64 = "0.13.0"
hex = "0.4.3"
