[package]
name = "wiremole"
description = "Manage Wireguard server with intuitive interface"
version = "0.0.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
readme = "../README.md"
repository = "https://github.com/Leo1003/wiremole"
license = "Apache-2.0"
keywords = ["wireguard", "webui"]

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
anyhow = "1.0.42"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
tokio = "1.9.0"
wirectl = "0.1.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_mysql_pool"] }
diesel = { version = "1.4.7", features = ["mysql"] }
ipnetwork = "0.18.0"
